keys container and key boxes created, classes assigned

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <div>
+        <div>
+            <kbd>A</kbd>
+        </div>
+        <div>
+            <kbd>S</kbd>
+        </div>
+        <div>
+            <kbd>D</kbd>
+        </div>
+        <div>
+            <kbd>F</kbd>
+        </div>
+        <div>
+            <kbd>G</kbd>
+        </div>
+        <div>
+            <kbd>H</kbd>
+        </div>
+        <div>
+            <kbd>J</kbd>
+        </div>
+        <div>
+            <kbd>K</kbd>
+        </div>
+        <div>
+            <kbd>L</kbd>
+        </div>
+    </div>
 </body>
 </html>
