--- a/index.html
+++ b/index.html
@@ -9,33 +9,42 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div>
-        <div>
+    <div class="keys">
+        <div data-key = "65" class="key">
             <kbd>A</kbd>
+            <span>CLAP</span>
         </div>
-        <div>
+        <div data-key = "83" class="key">
             <kbd>S</kbd>
+            <span>HIHAT</span>
         </div>
-        <div>
+        <div data-key = "68" class="key">
             <kbd>D</kbd>
+            <span>KICK</span>
         </div>
-        <div>
+        <div data-key ="70" class="key">
             <kbd>F</kbd>
+            <span>OPENHAT</span>
         </div>
-        <div>
+        <div data-key = "71" class="key">
             <kbd>G</kbd>
+            <span>BOOM</span>
         </div>
-        <div>
+        <div data-key = "72" class="key">
             <kbd>H</kbd>
+            <span>RIDE</span>
         </div>
-        <div>
+        <div data-key = "74" class="key">
             <kbd>J</kbd>
+            <span>SNARE</span>
         </div>
-        <div>
+        <div data-key = "75" class="key">
             <kbd>K</kbd>
+            <span>TOM</span>
         </div>
-        <div>
+        <div data-key = "76" class="key">
             <kbd>L</kbd>
+            <span>TINK</span>
         </div>
     </div>
 </body>
