--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum Kit Practice</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
+    <!-- <script src="index.js" defer></script> -->
 </head>
 <body>
     <div class="keys">
@@ -57,6 +57,16 @@
     <audio data-key = '74' src="sounds/snare.wav"></audio>
     <audio data-key = '75' src="sounds/tom.wav"></audio>
     <audio data-key = '76' src="sounds/tink.wav"></audio>
+
+
+    <script>
+        window.addEventListener('keydown', (e) => {
+            const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+            const key = document.querySelector(`.key[data-key="${e.keycode}"]`)
+            
+        })
+
+    </script>
 
 </body>
 </html>
