--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
 
     <script>
         window.addEventListener('keydown', (e) => {
-            const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
-            const key = document.querySelector(`.key[data-key="${e.keycode}"]`)
-            
+            console.log(e)
+            const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+            const key = document.querySelector(`.key[data-key="${e.keycode}"]`);
+            key.classList.add('playing')
+            if(!audio) return
+            audio.currentTime = 0;
+            audio.play()
         })
 
     </script>
